# software-engineering-projects-pk

./: prototype.py  pyproject.toml  setup.py
.github/workflows/: basic.yml
pkmodel/: model.py  solution.py
pkmodel/tests/: test_model.py
src/pkmodel/: model.py  solution.py
tests/: test_model.py
workflows/: basic.yml
